Tela de métricas

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000066</color>
     <color name="colorLight">#FF0000</color>
     <color name="backgroundColor">#EBFBFF</color>
+    <color name="colorGrey">#F2F6FC</color>
 </resources>
