--- a/app/src/main/res/layout/activity_nutrition.xml
+++ b/app/src/main/res/layout/activity_nutrition.xml
@@ -3,25 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+
     android:orientation="vertical"
-    tools:context=".view.mean.activity.MeanActivity">
+    tools:context=".view.nutrition.view.NutritionActivity">
 
     <include layout="@layout/simple_action_bar"></include>
 
     <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/view_mean_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_gravity="center"
+        android:orientation="horizontal"></LinearLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_mean"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="8dp">
+
+        <ImageView
+            android:id="@+id/img_food"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            tools:listitem="@layout/item_mean"></androidx.recyclerview.widget.RecyclerView>
+            android:scaleType="fitXY"></ImageView>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,62 +45,65 @@
             android:background="@color/backgroundColor"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+            <TextView
                 android:layout_margin="10dp"
-                android:elevation="10dp"
-                app:cardCornerRadius="10dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Laranja"
+                android:textColor="@color/colorPrimary"
+                android:textSize="22sp"
+                android:textStyle="bold"></TextView>
+        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/backgroundColor"
-                    android:orientation="vertical">
+    </androidx.cardview.widget.CardView>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="informação nutricional do prato de comida"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="18sp"
-                        android:textStyle="bold"></TextView>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="8dp">
+
+        <LinearLayout
+            android:background="@color/backgroundColor"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="15dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="qtd de alimentos"
+                        android:text="Classe"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
+                        android:textSize="22sp"></TextView>
 
                     <TextView
-                        android:id="@+id/txt_qdt_alimentos"
+                        android:id="@+id/txt_classes"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="222"
+                        android:text="Frutas"
                         android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
+                        android:textSize="22sp"></TextView>
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -217,56 +236,18 @@
             </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/view_not_food"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/plate"
-            android:tint="@color/colorPrimaryDark"></androidx.appcompat.widget.AppCompatImageView>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_ckal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="0.0 Kcal"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="35sp"
-            android:textStyle="bold" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_no_food"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/sem_alimentos"
-            android:textAlignment="center"
-            android:textColor="@color/colorLight"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
+    </androidx.cardview.widget.CardView>
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_add_mean"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:background="@drawable/button_style"
-        android:text="@string/add_mean"
-        android:textStyle="bold"
         app:icon="@drawable/outline_add_black"
-        app:iconSize="30dp"></com.google.android.material.button.MaterialButton>
+        app:iconSize="30dp"
+        android:background="@drawable/button_style"
+        android:textStyle="bold"
+        android:text="Adicionar Refeição"
+        android:layout_margin="20dp"
+        android:id="@+id/btn_add_food"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.google.android.material.button.MaterialButton>
+
 
 </LinearLayout>
