--- a/app/src/main/res/layout/activity_mean.xml
+++ b/app/src/main/res/layout/activity_mean.xml
@@ -10,7 +10,6 @@
     <include layout="@layout/simple_action_bar"></include>
 
     <LinearLayout
-        android:visibility="gone"
         android:id="@+id/view_mean_info"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,24 +21,22 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             tools:listitem="@layout/item_mean"></androidx.recyclerview.widget.RecyclerView>
-
-        <LinearLayout
+        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/backgroundColor"
-            android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="10dp">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:elevation="10dp"
-                app:cardCornerRadius="10dp">
-
+                android:layout_height="match_parent"
+                android:background="@color/backgroundColor"
+                android:orientation="vertical">
                 <LinearLayout
+                    android:layout_margin="10dp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@color/backgroundColor"
                     android:orientation="vertical">
 
@@ -53,210 +50,192 @@
                         android:textSize="18sp"
                         android:textStyle="bold"></TextView>
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="qtd de alimentos"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/txt_qdt_alimentos"
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="qtd de alimentos:"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+
+                        <TextView
+                            android:layout_marginLeft="5dp"
+                            android:id="@+id/txt_qdt_alimentos"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="left"
+                            android:text="222"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+                    </LinearLayout>
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="222"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="energiaKcal:"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+
+                        <TextView
+                            android:layout_marginLeft="5dp"
+                            android:id="@+id/txt_calorias_kcal"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="left"
+                            android:text="222"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="energiaKJ:"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+
+                        <TextView
+                            android:layout_marginLeft="5dp"
+                            android:id="@+id/txt_energia_kj"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="left"
+                            android:text="222"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="proteinaG:"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+
+                        <TextView
+                            android:layout_marginLeft="5dp"
+                            android:id="@+id/txt_proteinaG"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="left"
+                            android:text="22"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="colesterolMg:"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+
+                        <TextView
+                            android:layout_marginLeft="5dp"
+                            android:id="@+id/txt_colesterolMg"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="left"
+                            android:text="100"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:text="carboIdratoG:"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+
+                        <TextView
+                            android:layout_marginLeft="5dp"
+                            android:id="@+id/txt_carboIdratoG"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="left"
+                            android:text="100"
+                            android:textColor="@color/colorPrimaryDark"
+                            android:textSize="18sp"></TextView>
+                    </LinearLayout>
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="energiaKcal"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-
-                    <TextView
-                        android:id="@+id/txt_calorias_kcal"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="222"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="energiaKJ"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-
-                    <TextView
-                        android:id="@+id/txt_energia_kj"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="222"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="proteinaG"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-
-                    <TextView
-                        android:id="@+id/txt_proteinaG"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="22"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="colesterolMg"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-
-                    <TextView
-                        android:id="@+id/txt_colesterolMg"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="100"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="carboIdratoG"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-
-                    <TextView
-                        android:id="@+id/txt_carboIdratoG"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:text="100"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="18sp"></TextView>
-                </LinearLayout>
             </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-        </LinearLayout>
+
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/view_not_food"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:src="@drawable/plate"
-            android:tint="@color/colorPrimaryDark"></androidx.appcompat.widget.AppCompatImageView>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/text_ckal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="0.0 Kcal"
-            android:textAlignment="center"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="35sp"
-            android:textStyle="bold" />
-
-        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_weight="1"
             android:id="@+id/text_no_food"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="@string/sem_alimentos"
             android:textAlignment="center"
-            android:textColor="@color/colorLight"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp"
             android:textStyle="bold" />
-    </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_add_mean"
