--- a/app/src/main/res/layout/item_mean.xml
+++ b/app/src/main/res/layout/item_mean.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    android:elevation="10dp"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="10dp">
     <LinearLayout
+        android:background="@color/backgroundColor"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_margin="10dp"
-            android:tint="@color/colorPrimaryDark"
+            android:tint="@color/colorPrimary"
             android:src="@drawable/outline_restaurant"
             android:layout_width="40dp"
             android:layout_height="40dp">
@@ -16,7 +21,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:gravity="center"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@color/colorPrimary"
             android:id="@+id/text_item_mean"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
